[tool.poetry]
name = "codm-bot"
version = "1.0.0"
description = "CODM Telegram Bot"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.8"
httpx = "^0.27.0"
cloudscraper = "^1.2.71"
pycryptodome = "^3.20.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
